# sg-browser

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt
app/0-test-setup/: CMakeLists.txt  main.cc
app/sandbox/: CMakeLists.txt  Sandbox.cpp  env.h.sample
app/sandbox/gui/: GuiLayoutManager.h
app/setup-test/: CMakeLists.txt
cmake/: AddGitSubmodule.cmake  Docs.cmake
config/: CMakeLists.txt
config/cmake/: Docs.cmake  Warnings.cmake
config/configured/: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/static/glad/: CMakeLists.txt
docs/adr/: 25-07-11_LayerWrapper.md
docs/architecture/: 25-07-15_BasicFlow.md
src/: CMakeLists.txt  README.md
src/core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  KeyCodes.h
src/core/actions/: Actions.h  BrowserActions.h  CMakeLists.txt
src/core/entry-point/: SGBrowser.h
src/core/events/: BrowserEvents.h  CMakeLists.txt  Event.h  EventDispatcher.h  Events.h  MouseEvent.cpp  MouseEvent.h
src/core/gui/: ImGuiLayer.cpp  ImGuiLayer.h
src/core/layers/: CMakeLists.txt  Layer.h  LayerHandle.h  LayerStack.cpp  LayerStack.h  LayerWrapper.h
src/core/renderer/: HtmlRendererLayer.cpp  HtmlRendererLayer.h
src/core/window/: Window.cpp  Window.h
src/entry-point/: SGBrowser.h
src/gate-script/: CMakeLists.txt  GSParser.cpp  GSParser.h
src/glad/: CMakeLists.txt
src/glad/include/glad/: gl.h
src/glad/src/: glad.c
src/html/: CMakeLists.txt  DOM.h  HtmlFormatter.h  TagContainer.h
src/html-parser/: CMakeLists.txt  DOM.h  EventHorizon.cpp  EventHorizon.h  Html.h  HtmlFormatter.h  HtmlParser.cpp  HtmlParser.h  HtmlTags.h  TagContainer.h
src/html/parser/: CMakeLists.txt  HtmlParser.cpp
src/html/types/: CMakeLists.txt  Html.h
src/js-parser/: CMakeLists.txt  JSParser.cpp  JSParser.h  Naquadah.cpp  Naquadah.h
src/renderer/: CMakeLists.txt  Camera.h
tests/: CMakeLists.txt  LayersTest.cpp  main.cc
tests/core/actions/: ActionHandlerTest.cpp
tests/core/events/: EventDispatcherTest.cpp
tests/core/layers/: LayersTest.cpp
tests/html-parser/: EventHorizonTest.cpp  HtmlParserTest.cpp
tests/js-parser/: JSParserTest.cpp  NaquadahTest.cpp
